@@ -20,6 +20,7 @@ Jython 2.5.2a1
     - [ 1426 ] JSR 223 Bindings changes not taking effect and leaking between threads; unnecessary synchronization
     - [ 1548 ] Parentheses in CLASSPATH cause errors in jython.bat
     - [ 1576 ] files opened in 'a+' mode not readable
+    - [ 1563 ] unicode() for Java objects working differently in 2.2 and 2.5
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
     - Fix pickling of collections.defaultdict objects
